--- a/package.json
+++ b/package.json
@@ -1,3 +1,15 @@
 {
-  "type": "module"
+  "scripts": {
+    "build": "webpack && node build.js"
+  },
+  "devDependencies": {
+    "babel-loader": "^8.1.0",
+    "css-loader": "^3.5.3",
+    "glob": "^7.1.6",
+    "linaria": "^1.3.3",
+    "mini-css-extract-plugin": "^0.9.0",
+    "shelljs": "^0.8.4",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.11"
+  }
 }
