add license and add publish script

--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "scripts": {
     "prebuild": "webpack",
     "build": "node build.js",
-    "dev": "npm run build && serve public"
+    "dev": "npm run build && serve public",
+    "publish": "npm run build && neocities push public"
   },
   "devDependencies": {
     "babel-loader": "^8.1.0",
@@ -14,5 +15,6 @@
     "shelljs": "^0.8.4",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
-  }
+  },
+  "license": "WTFPL"
 }
