--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "npm run build && serve public",
     "publish": "npm run build && neocities push public"
   },
+  "types": "src/types.d.ts",
   "devDependencies": {
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
@@ -13,6 +14,8 @@
     "mini-css-extract-plugin": "^0.9.0",
     "serve": "^11.3.1",
     "shelljs": "^0.8.4",
+    "ts-loader": "^7.0.4",
+    "typescript": "^3.9.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
   },
