--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "scripts": {
     "prebuild": "webpack",
-    "build": "node build.js",
+    "build": "ts-node build.ts",
     "dev": "npm run build && serve public",
     "publish": "npm run build && neocities push public"
   },
   "types": "src/types.d.ts",
   "devDependencies": {
+    "@types/node": "^14.0.5",
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
     "glob": "^7.1.6",
@@ -15,6 +16,7 @@
     "serve": "^11.3.1",
     "shelljs": "^0.8.4",
     "ts-loader": "^7.0.4",
+    "ts-node": "^8.10.1",
     "typescript": "^3.9.3",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11"
