--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
         "typeRoots": [
             "./typings",
             "./node_modules/@types"
-        ]
-    },
-    "lib": [ "dom" ]
+        ],
+        "lib": [ "es6", "es2017", "dom" ]
+    }
 }
