--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "scripts": {
     "prebuild": "webpack",
-    "build": "node build.js",
+    "build": "node -r esm build.js",
     "dev": "npm run build && serve public",
     "publish": "npm run build && neocities push public"
   },
   "devDependencies": {
     "babel-loader": "^8.1.0",
     "css-loader": "^3.5.3",
+    "esm": "^3.2.25",
     "glob": "^7.1.6",
     "linaria": "^1.3.3",
+    "markdown-it": "^11.0.0",
+    "markdown-it-front-matter": "^0.2.1",
     "mini-css-extract-plugin": "^0.9.0",
     "serve": "^11.3.1",
     "shelljs": "^0.8.4",
